name:                wrecker
version:             0.1.1.2
synopsis:            A HTTP Performance Benchmarker
description:
 'wrecker' is a library for creating HTTP benchmarks. It is designed for
 benchmarking a series of HTTP request were the output of previous requests
 are used as inputs to the next request. This is useful for complex API
 profiling situations.


 'wrecker' does not provide any mechanism for making HTTP calls. It works
 with any HTTP client that produces a 'HttpException' during failure (so
 http-client and wreq will work out of the box).


 See the documentation for examples of how to use 'wrecker' with
 benchmarking scripts.
homepage:            https://github.com/skedgeme/wrecker#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Fischoff
maintainer:          jonathangfischoff@gmail.com
copyright:           2016 skedge.me
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
                , dependencies/http-client-tls-0.3.3-shim/http-client-tls
                , dependencies/http-client-tls-0.3.3-shim/http-client/publicsuffixlist
                , dependencies/http-client-tls-0.3.3-shim/http-client

  exposed-modules: Wrecker
                 , Wrecker.Recorder
                 , Wrecker.Runner
                 , Wrecker.Main
                 , Wrecker.Options
                 , Wrecker.Statistics
                 , Wrecker.Logger
                 , Network.Wreq.Wrecker

  other-modules: Network.HTTP.Client_0_5_3_2_SHIM
               , Network.HTTP.Client_0_5_3_2_SHIM.Body
               , Network.HTTP.Client_0_5_3_2_SHIM.Connection
               , Network.HTTP.Client_0_5_3_2_SHIM.Cookies
               , Network.HTTP.Client_0_5_3_2_SHIM.Core
               , Network.HTTP.Client_0_5_3_2_SHIM.Headers
               , Network.HTTP.Client_0_5_3_2_SHIM.Internal
               , Network.HTTP.Client_0_5_3_2_SHIM.Manager
               , Network.HTTP.Client_0_5_3_2_SHIM.MultipartFormData
               , Network.HTTP.Client_0_5_3_2_SHIM.Request
               , Network.HTTP.Client_0_5_3_2_SHIM.Response
               , Network.HTTP.Client_0_5_3_2_SHIM.Types
               , Network.HTTP.Client_0_5_3_2_SHIM.Util
               , Network.HTTP.Client.TLS_0_3_3_SHIM
               , Network.PublicSuffixList.Lookup
               , Network.PublicSuffixList.Types
               , Network.PublicSuffixList.Serialize
               , Network.PublicSuffixList.DataStructure

  build-depends: base                   >= 4.7 && < 5
               , aeson                    >= 0.7.0.3
               , ansi-terminal
               , ansigraph
               , array
               , base64-bytestring        
               , blaze-builder
               , bytestring               >= 0.10
               , case-insensitive
               , clock
               , clock-extras
               , connection
               , containers
               , cookie
               , cryptonite
               , data-default
               , data-default-class
               , deepseq
               , exceptions
               , filepath
               , http-client
               , http-types
               , immortal
               , memory
               , mime-types
               , network
               , network-uri
               , next-ref
               , optparse-applicative
               , random
               , statistics
               , stm
               , stm-chans
               , streaming-commons
               , tabular
               , text
               , threads
               , threads-extras
               , time
               , tls
               , transformers
               , unagi-chan
               , unix
               , unordered-containers
               , vector
               , vty
               , wreq
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind -pgmL markdown-unlit

executable example-server
  hs-source-dirs:      examples
  main-is:             Server.hs
  build-depends:       base
                     , wrecker
                     , scotty
                     , aeson-qq
                     , warp
                     , markdown-unlit
                     , aeson
                     , text
                     , immortal
                     , next-ref
                     , wai
                     , network
  cpp-options: -D_SERVER_IS_MAIN_
  ghc-options: -O2 -Wall -Wno-unused-do-bind -Wno-unused-top-binds -threaded -pgmL markdown-unlit -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable example-client
  hs-source-dirs:      examples
  main-is:             Client.lhs
  build-depends:       base
                     , wrecker
                     , wreq
                     , markdown-unlit
                     , aeson
                     , bytestring
                     , text
                     , http-client
                     , connection
  cpp-options: -D_CLIENT_IS_MAIN_
  ghc-options: -O2 -Wall -Wno-unused-top-binds -Wno-unused-do-bind -threaded -pgmL markdown-unlit -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable example
  hs-source-dirs:      examples
  main-is:             Main.lhs
  build-depends:       base
                     , wrecker
                     , scotty
                     , aeson-qq
                     , warp
                     , wreq
                     , markdown-unlit
                     , aeson
                     , bytestring
                     , text
                     , http-client
                     , connection
                     , immortal
                     , next-ref
                     , wai
                     , network
                     , connection
  ghc-options: -O2 -Wall -Wno-unused-do-bind -O2 -threaded -pgmL markdown-unlit  -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite wrecker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, examples
  main-is:             Spec.hs
  build-depends: base
               , wrecker
               , hspec
               , hspec-discover
               , scotty
               , aeson-qq
               , warp
               , wreq
               , markdown-unlit
               , aeson
               , bytestring
               , text
               , http-client
               , unordered-containers
               , wai
               , network
               , immortal
               , next-ref
               , connection
  ghc-options: -Wall -Wno-unused-do-bind -O2 -threaded  -pgmL markdown-unlit -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
