name:                wrecker
version:             0.1.2.0
synopsis:            An HTTP Performance Benchmarker
description:
 'wrecker' is a library and executable for creating HTTP benchmarks. It is designed for
 benchmarking a series of dependent requests.

 'wrecker' includes a wrapped version of the `wreq` Session API
 , mainly through 'Network.Wreq.Wrecker'.

 See the documentation of 'Wrecker' for more info.
homepage:            https://github.com/skedgeme/wrecker#readme
license:             BSD3
license-file:        LICENSE
author:              Jonathan Fischoff
maintainer:          jonathangfischoff@gmail.com
copyright:           2016 skedge.me
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs: src
                , dependencies/http-client-tls-0.3.3-shim/http-client-tls
                , dependencies/http-client-tls-0.3.3-shim/http-client/publicsuffixlist
                , dependencies/http-client-tls-0.3.3-shim/http-client

  exposed-modules: Wrecker
                 , Wrecker.Recorder
                 , Wrecker.Runner
                 , Wrecker.Main
                 , Wrecker.Options
                 , Wrecker.Statistics
                 , Wrecker.Logger
                 , Network.Wreq.Wrecker

  other-modules: Network.HTTP.Client_0_5_3_2_SHIM
               , Network.HTTP.Client_0_5_3_2_SHIM.Body
               , Network.HTTP.Client_0_5_3_2_SHIM.Connection
               , Network.HTTP.Client_0_5_3_2_SHIM.Cookies
               , Network.HTTP.Client_0_5_3_2_SHIM.Core
               , Network.HTTP.Client_0_5_3_2_SHIM.Headers
               , Network.HTTP.Client_0_5_3_2_SHIM.Internal
               , Network.HTTP.Client_0_5_3_2_SHIM.Manager
               , Network.HTTP.Client_0_5_3_2_SHIM.MultipartFormData
               , Network.HTTP.Client_0_5_3_2_SHIM.Request
               , Network.HTTP.Client_0_5_3_2_SHIM.Response
               , Network.HTTP.Client_0_5_3_2_SHIM.Types
               , Network.HTTP.Client_0_5_3_2_SHIM.Util
               , Network.HTTP.Client.TLS_0_3_3_SHIM
               , Network.PublicSuffixList.Lookup
               , Network.PublicSuffixList.Types
               , Network.PublicSuffixList.Serialize
               , Network.PublicSuffixList.DataStructure

  build-depends: base                   >= 4.7 && < 5
               , aeson                  >= 0.7.0.3
               , ansi-terminal          >= 0.6.2
               , ansigraph              >= 0.3.0
               , array                  >= 0.5.1
               , base64-bytestring      >= 1.0.0
               , blaze-builder          >= 0.4.0
               , bytestring             >= 0.10
               , case-insensitive       >= 1.2.0
               , clock                  >= 0.7.2
               , clock-extras           >= 0.1.0
               , connection             >= 0.2.6
               , containers             >= 0.5.7
               , cookie                 >= 0.4.2
               , cryptonite             >= 0.20
               , data-default           >= 0.7.1
               , data-default-class     >= 0.1.2
               , deepseq                >= 1.4.2
               , exceptions             >= 0.8.3
               , filepath               >= 1.4.1
               , http-client            >= 0.4.31
               , http-types             >= 0.9.1
               , immortal               >= 0.2.2
               , memory                 >= 0.13
               , mime-types             >= 0.1.0
               , network                >= 2.6.3
               , network-uri            >= 2.6.1
               , next-ref               >= 0.1.0
               , optparse-applicative   >= 0.13.0
               , random                 >= 1.1
               , statistics             >= 0.13.3
               , stm                    >= 2.4.4
               , stm-chans              >= 3.0.0
               , streaming-commons      >= 0.1.16
               , tabular                >= 0.2.2
               , text                   >= 1.2.2
               , threads                >= 0.5.1
               , threads-extras         >= 0.1.0
               , time                   >= 1.6.0
               , tls                    >= 1.3.8
               , transformers           >= 0.5.2
               , unagi-chan             >= 0.4.0
               , unix                   >= 2.7.2
               , unordered-containers   >= 0.2.7
               , vector                 >= 0.11.0
               , vty                    >= 5.11
               , wreq                   >= 0.4.1
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind -pgmL markdown-unlit

executable wreck
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base
                     , wrecker
                     , markdown-unlit
                     , optparse-applicative
                     , http-client
                     , wreq
                     , lens
  cpp-options: -D_SERVER_IS_MAIN_
  ghc-options: -O2 -Wall -Wno-unused-do-bind -Wno-unused-top-binds -threaded -pgmL markdown-unlit -rtsopts -with-rtsopts="-N -I0 -qg"
  default-language:    Haskell2010

executable example-server
  hs-source-dirs:      examples
  main-is:             Server.hs
  build-depends:       base
                     , wrecker
                     , scotty
                     , aeson-qq
                     , warp
                     , markdown-unlit
                     , aeson
                     , text
                     , immortal
                     , next-ref
                     , wai
                     , network
  cpp-options: -D_SERVER_IS_MAIN_
  ghc-options: -O2 -Wall -Wno-unused-do-bind -Wno-unused-top-binds -threaded -pgmL markdown-unlit -rtsopts -with-rtsopts="-N -I0 -qg"
  default-language:    Haskell2010

executable example-client
  hs-source-dirs:      examples
  main-is:             Client.lhs
  build-depends:       base
                     , wrecker
                     , wreq
                     , markdown-unlit
                     , aeson
                     , bytestring
                     , text
                     , http-client
                     , connection
  cpp-options: -D_CLIENT_IS_MAIN_
  ghc-options: -O2 -Wall -Wno-unused-top-binds -Wno-unused-do-bind -threaded -pgmL markdown-unlit -rtsopts -with-rtsopts="-N -I0 -qg"
  default-language:    Haskell2010

executable example
  hs-source-dirs:      examples
  main-is:             Main.lhs
  build-depends:       base
                     , wrecker
                     , scotty
                     , aeson-qq
                     , warp
                     , wreq
                     , markdown-unlit
                     , aeson
                     , bytestring
                     , text
                     , http-client
                     , connection
                     , immortal
                     , next-ref
                     , wai
                     , network
                     , connection
  ghc-options: -O2 -Wall -Wno-unused-do-bind -O2 -threaded -pgmL markdown-unlit  -rtsopts -with-rtsopts="-N -I0 -qg"
  default-language:    Haskell2010

test-suite wrecker-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, examples
  main-is:             Spec.hs
  build-depends: base
               , wrecker
               , hspec
               , hspec-discover
               , scotty
               , aeson-qq
               , warp
               , wreq
               , markdown-unlit
               , aeson
               , bytestring
               , text
               , http-client
               , unordered-containers
               , wai
               , network
               , immortal
               , next-ref
               , connection
  ghc-options: -Wall -Wno-unused-do-bind -O2 -threaded  -pgmL markdown-unlit -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
